// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FallBack Snapshots should match snapshot for error type 1`] = `
<div
  class="mt-lg ant-flex css-dev-only-do-not-override-1d4w9r2 ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
>
  <span
    class="ant-typography css-dev-only-do-not-override-1d4w9r2"
  >
    Something went wrong.
  </span>
  <span
    aria-label="close-circle"
    class="anticon anticon-close-circle colorRed icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="close-circle"
      fill="currentColor"
      fill-rule="evenodd"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm128.01 198.83c.03 0 .05.01.09.06l45.02 45.01a.2.2 0 01.05.09.12.12 0 010 .07c0 .02-.01.04-.05.08L557.25 512l127.87 127.86a.27.27 0 01.05.06v.02a.12.12 0 010 .07c0 .03-.01.05-.05.09l-45.02 45.02a.2.2 0 01-.09.05.12.12 0 01-.07 0c-.02 0-.04-.01-.08-.05L512 557.25 384.14 685.12c-.04.04-.06.05-.08.05a.12.12 0 01-.07 0c-.03 0-.05-.01-.09-.05l-45.02-45.02a.2.2 0 01-.05-.09.12.12 0 010-.07c0-.02.01-.04.06-.08L466.75 512 338.88 384.14a.27.27 0 01-.05-.06l-.01-.02a.12.12 0 010-.07c0-.03.01-.05.05-.09l45.02-45.02a.2.2 0 01.09-.05.12.12 0 01.07 0c.02 0 .04.01.08.06L512 466.75l127.86-127.86c.04-.05.06-.06.08-.06a.12.12 0 01.07 0z"
      />
    </svg>
  </span>
</div>
`;

exports[`FallBack Snapshots should match snapshot for info type 1`] = `
<div
  class="mt-lg ant-flex css-dev-only-do-not-override-1d4w9r2 ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
>
  <span
    class="ant-typography css-dev-only-do-not-override-1d4w9r2"
  >
    Something went wrong.
  </span>
  <span
    aria-label="info-circle"
    class="anticon anticon-info-circle colorBlue icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="info-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
      <path
        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
</div>
`;

exports[`FallBack Snapshots should match snapshot for warning type 1`] = `
<div
  class="mt-lg ant-flex css-dev-only-do-not-override-1d4w9r2 ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
>
  <span
    class="ant-typography css-dev-only-do-not-override-1d4w9r2"
  >
    Something went wrong.
  </span>
  <span
    aria-label="warning"
    class="anticon anticon-warning colorYellow icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="warning"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
      />
    </svg>
  </span>
</div>
`;
